Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21385

ClangFormat: Unexpected indentation/compression after clang snippet completion

XMLWordPrintable

    • 0a29e12d0cad2921a187d8d895c7b70381a25f40 (qt-creator/qt-creator/4.8)

      // Complete "using namespace" (the clang snippet).
      
      void f() {}
      

      You get:

      using namespace
      
          void f() {} // Ops, now indented.
      

      A variation of this (no newline in-between) is:

      // Complete "using namespace"
      void f() {}
      

      You get:

      using namespace void f() {} // Ops, newline removed.
      

      Both cases do not happen if you select the snippet coming from Qt Creator, not clang.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            yvvan Ivan Donchevskii
            kosjar Nikolai Kosjar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes