ClangFormat: Fix text indentation after inserted snippet

Limit the range of text which is indented to the last
non-empty character inside the block.

Fixes: QTCREATORBUG-21385
Change-Id: If9bc271e7ecf81482cb682efd0f09770e6fa02f5
Reviewed-by: Marco Bubke <marco.bubke@qt.io>